# UXP1A-Linda

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  linda.cbp
.cmake/api/v1/reply/: cache-v2-4babcec73422e740befe.json  cache-v2-9a5bde4496848ab27f64.json  cmakeFiles-v1-69bf74111caf6897c076.json  cmakeFiles-v1-9a51a44132a7330b6683.json  codemodel-v2-243bf2883459c74b4dce.json  codemodel-v2-39785d093f6df0a81801.json  directory-_deps.doctest-build-Debug-bbfe6d23261a6dc806ed.json  directory-lib.linda-Debug-8cbecfc7f234de0d465a.json  index-2022-05-23T21-48-20-0072.json  index-2022-05-31T14-23-48-0750.json  target-doctest_with_main-Debug-1a79bc5b33ffa2ace8d2.json  target-linda-Debug-02827b78c7b9767006b7.json  target-linda-Debug-e4168da6cabbce769184.json  target-lindaTestClient-Debug-3d57f051f5e41cc6086f.json  target-lindaTestClient-Debug-4b5ea773a44f01714724.json  target-lindaTestHost-Debug-3287eb10329955def696.json  target-lindaTestHost-Debug-d10e90e4d2e80672b6c5.json  target-lindaUnitTests-Debug-fe6b6a6bf528eb10983a.json  target-parser-Debug-3af5a6b83dbb65a6277d.json  target-parserUnitTests-Debug-24e81cd9eeb497f39315.json  target-spdlog-Debug-01682b4869475eddf645.json
acceptance_tests/: runner.sh  test.sh
acceptance_tests/1/: test_1  test_1.expected
acceptance_tests/2/: test_2
acceptance_tests/3/: test_3
acceptance_tests/4/: test_4  test_4.expected
acceptance_tests/5/: test_5  test_5.expected
acceptance_tests/6/: test_6  test_6.expected
acceptance_tests/7/: test_7b  test_7d.expected  test_7f  test_7f.expected
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/linda/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/linda/include/: linda.h  message.h  tuple.h  utilities.h
lib/linda/include/linda/: consts.h  exceptions.h  linda.h  message.h  signals.h  tuple.h  utilities.h
lib/linda/src/: linda.cpp  message.cpp  signals.cpp
lib/linda/test/: tests.cpp
lib/parser/: CMakeLists.txt  Makefile  cmake_install.cmake  parserUnitTests
lib/parser/include/: PatternsParser.h  TupleParser.h
lib/parser/include/parser/: Lexer.h  PatternsParser.h  StringReader.h  Token.h  TupleParser.h  consts.h  exceptions.h  lexer.h  patterns-parser.h  token-type.h  token.h  tuple-parser.h
lib/parser/src/: Lexer.cpp  Patterns.cpp  PatternsParser.cpp  StringReader.cpp  TupleParser.cpp  lexer.cpp  patterns-parser.cpp  string-reader.cpp  tuple-parser.cpp
lib/parser/test/: pattern-parser-test.cpp  patternParserTest.cpp  test.cpp  tuple-parser-test.cpp  tupleParserTest.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  linda.cpp  linda.h  lindaTestClient  lindaTestHost
src/linda-client/: main.cpp
src/linda-server/: main.cpp
src/server/: main.cpp
src/structures/: message.h  tuple.h
src/test-client/: main.cpp
src/test-host/: main.cpp
test/: Makefile  cmake_install.cmake
